--- a/articles/CSS/移动端（手机）实现1像素下边框的方法.md
+++ b/articles/CSS/移动端（手机）实现1像素下边框的方法.md
@@ -79,7 +79,7 @@ iphone8的device-pixel-ratio = 750 / 375 = 2
 ```
 
 2. rem布局实现
-这里就不介绍rem的实现方法了，如果对rem布局不是很清楚的小伙伴，可以看看我写的另一篇[文章]()，详细的介绍了rem的相关用法。
+这里就不介绍rem的实现方法了，如果对rem布局不是很清楚的小伙伴，可以看看我写的另一篇[文章](https://github.com/DengSongsong/Blogs/issues/3)，详细的介绍了rem的相关用法。
 
 ## 写在最后
 <p>
