--- a/articles/原生JS/正则表达式学习一.md
+++ b/articles/原生JS/正则表达式学习一.md
@@ -227,7 +227,7 @@ console.log(regex.test('ba'));      //true
 console.log(regex.test('bA'));       //false
 ```
 6. 分组：(...)
-* (x)：匹配 'x' 并且记住匹配项，括号被称为捕获括号。
+* (x)：匹配 'x' 并且记住匹配项，捕获性分组，括号被称为捕获括号。
 
 ```
 const regex = /(abab)+/;
@@ -240,7 +240,7 @@ console.log(regex.exec('abababababab'));   //['abababababab','abab']
 console.log(regex.exec('ababababababab'));   //['abababababab','abab']
 console.log(regex.exec('abababababababab'));   //['abababababababab','abab']
 ```
-* (?:X)：匹配X，但是不记录匹配项。
+* (?:X)：匹配X，但是不记录匹配项，非捕获性分组。
 
 ```
 const regex = /(?:abab)+/;
