--- a/articles/原生JS/正则表达式学习一.md
+++ b/articles/原生JS/正则表达式学习一.md
@@ -259,7 +259,7 @@ console.log(regex.exec('abababababababab'));   //['abababababababab']
 const regex = /\d+(?=\.)/;
 console.log(regex.exec('3.141'))  //['3']
 ```
-* (?!X)：正向否定查找，即匹配后面不跟X的字符串，与(?:X)相反
+* (?!X)：正向否定查找，即匹配后面不跟X的字符串，与(?=X)相反
 
 ```
 const regex = /\d+(?!\.)/;
