--- a/articles/原生JS/正则表达式学习之基础二.md
+++ b/articles/原生JS/正则表达式学习之基础二.md
@@ -38,7 +38,20 @@ console.log(regex.test('abacd'));     //false
 const str = 'this is javascripts'
 console.log(str.match(/\bi.\s\w+/)); //['is javascripts']
 ```
-4. replace()：一个在字符串中执行查找匹配的String方法，并且使用替换字符串替换掉匹配到的子字符串
+
+4. search()：一个在字符串中测试匹配的String方法，它返回匹配到的位置索引，或者在失败时返回-1
+
+```
+const str = 'this is javascripts'
+console.log(str.search(/\bi.\s\w+/)); //5
+```
+5. split()：一个使用正则表达式或者一个固定字符串分隔一个字符串，并将分隔后的子字符串存储到数组中的String方法
+
+```
+const str = 'this is javascripts'
+console.log(str.split(/\s/)); //[ 'this', 'is', 'javascripts' ]
+```
+6. replace()：一个在字符串中执行查找匹配的String方法，并且使用替换字符串替换掉匹配到的子字符串
 * 接受字符串
 
 ```
@@ -53,18 +66,73 @@ str.replace(/\b(i.)\s(\w+)/, (...args) => {
    console.log(args); //[ 'is javascripts', 'is', 'javascripts', 5, 'this is javascripts']
 });  
 ```
-5. search()：一个在字符串中测试匹配的String方法，它返回匹配到的位置索引，或者在失败时返回-1
+
+## 特殊的 $
+<p>
+$+编号，表示捕获性分组的内容，例如(\d)表示一个捕获性分组，RegExp.$1指向该分组捕获的内容。主要用于从模式匹配得到的字符串用于替换。
+</p>
 
 ```
-const str = 'this is javascripts'
-console.log(str.search(/\bi.\s\w+/)); //5
+let str = "#8080";
+let output = str.replace(/#(\d+)/,"$1"+"~~");//自然也可以写成 "$1~~"
+console.log(RegExp.$1);//8080
+console.log(output);//8080~~
 ```
-6. split()：一个使用正则表达式或者一个固定字符串分隔一个字符串，并将分隔后的子字符串存储到数组中的String方法
+### 常见用途
+* $1、$2、...、$99：与regexp中的第1到第99个子表达式相匹配的文本
+* $&：与regexp相匹配的字串
+* $`：位于匹配字串左侧的文本
+* $'：位于匹配字串右侧的文本
+* $$：直接量符号
 
 ```
-const str = 'this is javascripts'
-console.log(str.split(/\s/)); //[ 'this', 'is', 'javascripts' ]
+/* $1、$2、...、$99 */
+let str = 'aa22AA';
+console.log(str.replace(/([a-z]+)(\d+)([A-Z]+)/g, '$1')); // "aa"
+console.log(str.replace(/([a-z]+)(\d+)([A-Z]+)/g, '$2')); // "22"
+console.log(str.replace(/([a-z]+)(\d+)([A-Z]+)/g, '$3')); // "AA"
+//猜想 如果是 $4 回事什么呢？ undefined ? 
+console.log(str.replace(/([a-z]+)(\d+)([A-Z]+)/g, '$4')); // "$4"
+//所以，要是没有该子项，则当成普通字符串处理了
+    
+/* $& */
+console.log(str.replace(/([a-z]+)(\d+)([A-Z]+)/g, '$&')); //"aa22AA"
+
+/* $` */
+console.log(str.replace(/(\d+)/g, '$`')); //"aaaaAA"
+
+/* $' */
+console.log(str.replace(/(\d+)/g, "$'")); //"aaAAAA"
+
+/* $$ */
+console.log(str.replace(/(\d+)/g, '$$')); //"aa$AA"
 ```
+## 反向引用
+<p>
+反向引用：正则表达式匹配时，各个捕获性分组匹配到的内容，会依次保存在内存中一个特定的组里，通过“\+数字”的方式可以在正则中引用组里的内容，这种引用称作反向引用。捕获性分组匹配成功之前，它的内容是不确定的，一旦匹配成功，组里的内容也就确定了。
+</p>
+
+```
+let str = 'abcaabbccabc';
+console.log(str.match(/([abc])\1/g));//[ 'aa', 'bb', 'cc' ]
+```
+<p>
+反向引用中\n指向正则表达式前面第n个捕获性分组匹配到的内容，建议反向引用避免索引大于9的捕获性分组，例如：子表达式\11，有下面两种可能：
+</p>
+
+* 指向第1个捕获性分组匹配到的内容，同时匹配普通字符2，目前IE浏览器按照这种方式解析正则。
+* 指向第12个捕获性分组匹配到的内容，目前非IE等现代浏览器都是这样解析正则的。
+<p>
+如果反向引用不存在，正则将会匹配失败。
+</p>
+
+```
+let str = 'abcaabbccabc';
+console.log(str.match(/([abc])\2/g));//null
+```
+<p>
+由于不存在第2个捕获性分组，因此反向引用子表达式\2匹配失败，返回null。
+</p>
 
 ## 常用正则表达式
 * 匹配中文字符： [\u4e00-\u9fa5]
