--- a/articles/面试/面试总结.md
+++ b/articles/面试/面试总结.md
@@ -150,6 +150,16 @@ html5的一种本地缓存方案，目前主要用于浏览器保存体积较大
 5.	Promise对象是一个构造函数，用来生成promise实例。构造函数接受一个函数作为参数，该函数的两个参数分别是resolve和reject，这两个参数是两个函数，由javascript引擎提供。
 6.	Resolve函数的作用是将promise对象的状态从“未完成”变为“成功”，在异步操作成功时调用，并将异步操作的结果作为参数传递出去。Reject函数的作用是将promise对象的状态从“未完成”变为“失败”，在异步操作失败时调用，并将异步操作报出的错误作为参数传递出去。
 7.	Promise实例生成以后，可以用then方法分别指定resolved状态和rejected状态的回调函数。then方法可以接受两个回调函数作为参数。第一个回调函数是promise对象的状态变为resolved时调用，第二个回调函数是promise对象的状态变为rejected时调用，其中第二个函数是可选的。这两个函数都接受promise对象传出的值作为参数
+### 十五、函数节流
+1.	作用：限制事件的频繁触发，dom操作比起非dom交互需要更多的内存和cpu时间，连续尝试进行过多的dom相关操作可能会导致浏览器挂起，有时候甚至会崩溃。
+2.	原理：如果你持续触发事件，每隔一段时间，只执行一次事件。
+3.	方法：
+3.1.	使用定时器：当触发事件的时候，我们设置一个定时器，再触发事件的时候，如果定时器存在，就不执行，直到定时器执行，然后执行函数，清空定时器，这样就可以设置下个定时器
+3.2.	使用时间戳：当触发事件的时候，我们取出当前的时间戳，然后减去之前的时间戳(最一开始值设为 0 )，如果大于设置的时间周期，就执行函数，然后更新时间戳为当前的时间戳，如果小于，就不执行
+### 十六、函数防抖
+1.	作用：限制事件的频繁触发
+2.	原理：你尽管触发事件，但是我一定在事件触发 n 秒后才执行，如果你在一个事件触发的 n 秒内又触发了这个事件，那我就以新的事件的时间为准，n 秒后才执行，总之，就是要等你触发完事件 n 秒内不再触发事件，我才执行
+
 ## CSS
 ### 一、	box-sizing 盒模型
 1.	border-box:width = content + padding + border
