--- a/articles/面试/面试总结.md
+++ b/articles/面试/面试总结.md
@@ -159,6 +159,12 @@ html5的一种本地缓存方案，目前主要用于浏览器保存体积较大
 ### 十六、函数防抖
 1.	作用：限制事件的频繁触发
 2.	原理：你尽管触发事件，但是我一定在事件触发 n 秒后才执行，如果你在一个事件触发的 n 秒内又触发了这个事件，那我就以新的事件的时间为准，n 秒后才执行，总之，就是要等你触发完事件 n 秒内不再触发事件，我才执行
+### 十七、call()、apply()、bind()
+1.	作用：都是用来改变方法的this关键字
+2.	call(): 接受多个参数，第一个参数为this对象，其余参数都可直接传递给函数，传递的参数必须逐个列举出来
+3.	apply()：接收两个参数，第一个参数为this对象，第二个参数为数组，或Array实例，也可以为arguments对象
+4.	bind()：会创建一个函数的实例，其this值会被绑定到传给bind()函数的值  ES5
+
 
 ## CSS
 ### 一、	box-sizing 盒模型
