--- a/articles/面试/面试总结.md
+++ b/articles/面试/面试总结.md
@@ -164,6 +164,21 @@ html5的一种本地缓存方案，目前主要用于浏览器保存体积较大
 2.	call(): 接受多个参数，第一个参数为this对象，其余参数都可直接传递给函数，传递的参数必须逐个列举出来
 3.	apply()：接收两个参数，第一个参数为this对象，第二个参数为数组，或Array实例，也可以为arguments对象
 4.	bind()：会创建一个函数的实例，其this值会被绑定到传给bind()函数的值  ES5
+### 十八、前端性能优化
+1.	网络加载类
+1.1．	减少http请求次数及大小，合并图片，压缩js、css等文件
+1.2．	减少cookie的大小，每次客户端向服务器发送请求，会自动携带cookie
+1.3．	合理设置http缓存，例如添加代理服务器，当代理服务器转发从源服务器返回的响应时，其将保存资源的副本，客户端再次发送请求时将从代理服务器获取请求资源。
+1.4．	图片懒加载
+2.	页面渲染类
+2.1.	css放在页面最上部，js放在页面最下面。
+浏览器会在下载完全部的css后才对整个页面进行渲染。浏览器在执行js代码时，不能同时做其他事情，即每次出现都会让页面等待脚本的解析和执行，js执行完才继续渲染页面，这就是js阻塞的特性。
+Script标签的两个属性：async、defer
+(1). 没有async或defer：表示浏览器会立即加载并执行相应的脚本。也就是说在渲染script标签之后的文档之前，不等待后续加载的文档元素，读到就开始加载和执行，此举会阻塞后续文档加载
+(2). 有async，表示后续文档的加载和渲染与js脚本的加载和执行时并行进行的，即异步执行
+(3) 有defer，表示加载后续文档的过程和js脚本的加载（此时仅加载不执行）是并行进行的的（异步），js脚本的执行需要等到文档所有的元素解析完成之后
+		2.2. 减少dom操作的次数，减少浏览器的重排和重绘
+		2.3 合理利用浏览器缓存
 
 
 ## CSS
