完成大部分内容

--- a/articles/vue/生命周期.md
+++ b/articles/vue/生命周期.md
@@ -1,4 +1,4 @@
-#生命周期解析过程
+# 生命周期解析过程
 
 ## callHook
 <p>
@@ -63,7 +63,7 @@ function Vue (options) {
     initProvide(vm) // resolve provide after data/props 初始化Provide
     callHook(vm, 'created') //触发created钩子
 
-    if (vm.$options.el) {
+    if (vm.$options.el) { //判断是否有el选项,如果有则执行$mount方法
       vm.$mount(vm.$options.el)
     }
   }
@@ -100,6 +100,7 @@ export function initEvents (vm: Component) {
 ### Init Lifecycle
 
 ```
+// vue/src/core/instance/render.js
 export function initLifecycle (vm: Component) {
   const options = vm.$options
 
@@ -130,20 +131,550 @@ export function initLifecycle (vm: Component) {
 该方法主要是为vm对象添加了$parent、$root、$children、$refs等属性，以及一些其它的生命周期相关的标识
 </p>
 
+### initRender(vm)
+
+```
+export function initRender (vm: Component) {
+  vm._vnode = null // the root of the child tree
+  vm._staticTrees = null // v-once cached trees
+  const options = vm.$options
+  const parentVnode = vm.$vnode = options._parentVnode // the placeholder node in parent tree
+  const renderContext = parentVnode && parentVnode.context
+  vm.$slots = resolveSlots(options._renderChildren, renderContext)
+  vm.$scopedSlots = emptyObject
+  // bind the createElement fn to this instance
+  // so that we get proper render context inside it.
+  // args order: tag, data, children, normalizationType, alwaysNormalize
+  // internal version is used by render functions compiled from templates
+  vm._c = (a, b, c, d) => createElement(vm, a, b, c, d, false)
+  // normalization is always applied for the public version, used in
+  // user-written render functions.
+  vm.$createElement = (a, b, c, d) => createElement(vm, a, b, c, d, true)
+
+  // $attrs & $listeners are exposed for easier HOC creation.
+  // they need to be reactive so that HOCs using them are always updated
+  const parentData = parentVnode && parentVnode.data
+}
+```
+<p>这部分主要是给vm添加虚拟dom、solt等相关属性和方法</p>
+
 ## beforeCreate()
+<p>
+该钩子函数在实例初始化之后，数据观测 (data observer) 和 event/watcher 事件配置之前被调用。实现源码参考callHook部分。
+</p>
 
 ## Init injections && reactivity
 
+### initInjections(vm) && initProvide(vm)
+
+```
+// vue/src/core/instance/inject.js
+export function initProvide (vm: Component) {
+  const provide = vm.$options.provide
+  if (provide) {
+    vm._provided = typeof provide === 'function'
+      ? provide.call(vm)
+      : provide
+  }
+}
+
+export function initInjections (vm: Component) {
+  const result = resolveInject(vm.$options.inject, vm)
+  if (result) {
+    toggleObserving(false)
+    Object.keys(result).forEach(key => {
+      /* istanbul ignore else */
+      if (process.env.NODE_ENV !== 'production') {
+        defineReactive(vm, key, result[key], () => {
+          warn(
+            `Avoid mutating an injected value directly since the changes will be ` +
+            `overwritten whenever the provided component re-renders. ` +
+            `injection being mutated: "${key}"`,
+            vm
+          )
+        })
+      } else {
+        defineReactive(vm, key, result[key])
+      }
+    })
+    toggleObserving(true)
+  }
+}
+```
+<p>
+initProvide()和initInjections()两个方法配套使用，以允许一个祖先组件向其所有子孙后代注入一个依赖，不论组件层次有多深，并在起上下游关系成立的时间里始终生效，直白点说就是用于将父组件_provided中定义的值，通过inject注入到子组件。provide 和 inject 绑定并不是可响应的。这是刻意为之的。然而，如果你传入了一个可监听的对象，那么其对象的属性还是可响应的
+</p>
+
+### initState(vm)
+
+```
+// vue/src/core/instance/state.js
+export function initState (vm: Component) {
+  vm._watchers = []
+  const opts = vm.$options
+  if (opts.props) initProps(vm, opts.props)
+  if (opts.methods) initMethods(vm, opts.methods)
+  if (opts.data) {
+    initData(vm)
+  } else {
+    observe(vm._data = {}, true /* asRootData */)
+  }
+  if (opts.computed) initComputed(vm, opts.computed)
+  if (opts.watch && opts.watch !== nativeWatch) {
+    initWatch(vm, opts.watch)
+  }
+}
+```
+<p>这部分主要是对数据进行操作，props、methods、data、computed、watch</p>
+
 ## created()
+<p>
+在实例创建完成后被立即调用。在这一步，实例已完成以下的配置：数据观测 (data observer)，属性和方法的运算，watch/event 事件回调。然而，挂载阶段还没开始，$el 属性目前不可见
+</p>
+
+## 判断是否有’el‘选项
+
+```
+// vue/src/core/instance/init.js
+if (vm.$options.el) {
+  vm.$mount(vm.$options.el)
+}
+```
+<p>
+该部分主要是判断是否有‘el’选项，若有则进行“判断是否有template选项”操作，否则进行“vm.$mount(el) is called”操作
+</p>
+
+### Compile template into render && Compile el's outerHTML as template
+
+```
+// vue/src/platforms/web/entry-runtime-with-compiler.js
+const idToTemplate = cached(id => {
+  const el = query(id)
+  return el && el.innerHTML
+})
+
+const mount = Vue.prototype.$mount //保存之前定义的$mount方法，然后重写
+Vue.prototype.$mount = function (
+  el?: string | Element,
+  hydrating?: boolean
+): Component {
+  el = el && query(el) //内部判断el是否是字符串，不是的话就直接返回
+
+  /* istanbul ignore if */
+  if (el === document.body || el === document.documentElement) {
+    process.env.NODE_ENV !== 'production' && warn(
+      `Do not mount Vue to <html> or <body> - mount to normal elements instead.`
+    )
+    return this
+  }
+
+  const options = this.$options
+  // resolve template/el and convert to render function
+  if (!options.render) { //判断是否有render函数
+    let template = options.template
+    if (template) { // 判断是否有template
+      if (typeof template === 'string') {
+        if (template.charAt(0) === '#') {
+          template = idToTemplate(template)
+          /* istanbul ignore if */
+          if (process.env.NODE_ENV !== 'production' && !template) {
+            warn(
+              `Template element not found or is empty: ${options.template}`,
+              this
+            )
+          }
+        }
+      } else if (template.nodeType) {
+        template = template.innerHTML
+      } else {
+        if (process.env.NODE_ENV !== 'production') {
+          warn('invalid template option:' + template, this)
+        }
+        return this
+      }
+    } else if (el) {
+      template = getOuterHTML(el)
+    }
+    if (template) {
+      /* istanbul ignore if */
+      if (process.env.NODE_ENV !== 'production' && config.performance && mark) {
+        mark('compile')
+      }
+
+      const { render, staticRenderFns } = compileToFunctions(template, {
+        shouldDecodeNewlines,
+        shouldDecodeNewlinesForHref,
+        delimiters: options.delimiters,
+        comments: options.comments
+      }, this)
+      options.render = render
+      options.staticRenderFns = staticRenderFns
+
+      /* istanbul ignore if */
+      if (process.env.NODE_ENV !== 'production' && config.performance && mark) {
+        mark('compile end')
+        measure(`vue ${this._name} compile`, 'compile', 'compile end')
+      }
+    }
+  }
+  return mount.call(this, el, hydrating)
+}
+
+/**
+ * Get outerHTML of elements, taking care
+ * of SVG elements in IE as well.
+ */
+function getOuterHTML (el: Element): string {
+  if (el.outerHTML) {
+    return el.outerHTML
+  } else {
+    const container = document.createElement('div')
+    container.appendChild(el.cloneNode(true))
+    return container.innerHTML
+  }
+}
+
+Vue.compile = compileToFunctions // 对最后生成的模版进行解析，生成render
+```
+<p>
+这部分主要是template进行解析编译。先判断是否有render函数，如果有的话不作处理直接执行mount.call(this, el, hydrating)。如果没有render函数，则获取template，template可以是#id、模版字符串、dom元素，如果没有template，则获取el以及其子内容作为模版
+</p>
 
 ## beforeMount()
+<p>
+在挂载开始之前被调用：相关的 render 函数首次被调用。该钩子在服务器端渲染期间不被调用。
+</p>
+
+### mountComponent
+
+```
+// vue/src/core/instance/lifecycle.js
+// 挂载组件的方法
+export function mountComponent (
+  vm: Component,
+  el: ?Element,
+  hydrating?: boolean
+): Component {
+  vm.$el = el
+  if (!vm.$options.render) {
+    vm.$options.render = createEmptyVNode
+  }
+  callHook(vm, 'beforeMount') //调用beforeMount钩子 
+
+  let updateComponent
+  /* istanbul ignore if */
+  if (process.env.NODE_ENV !== 'production' && config.performance && mark) {
+    updateComponent = () => {
+      const name = vm._name
+      const id = vm._uid
+      const startTag = `vue-perf-start:${id}`
+      const endTag = `vue-perf-end:${id}`
+
+      mark(startTag)
+      const vnode = vm._render()
+      mark(endTag)
+      measure(`vue ${name} render`, startTag, endTag)
+
+      mark(startTag)
+      vm._update(vnode, hydrating)
+      mark(endTag)
+      measure(`vue ${name} patch`, startTag, endTag)
+    }
+  } else {
+    updateComponent = () => {
+      vm._update(vm._render(), hydrating)
+    }
+  }
+  return vm
+}
+```
+<p>
+可以看到在mountComponent()方法中调用了beforeMount钩子，然后在updateComponent中调用了vm._render()，最后返回vm对象
+</p>
+<p>
+mountComponent在Vue的$mount方法中使用：
+<p>
+
+```
+// src/platforms/web/runtime/index.js
+Vue.prototype.$mount = function (
+  el?: string | Element,
+  hydrating?: boolean
+): Component {
+  el = el && inBrowser ? query(el) : undefined
+  return mountComponent(this, el, hydrating)
+}
+```
 
 ## mounted()
+<p>
+el 被新创建的 vm.$el 替换，并挂载到实例上去之后调用该钩子。如果 root 实例挂载了一个文档内元素，当 mounted 被调用时 vm.$el 也在文档内
+</p>
+
+### mountComponent
+
+```
+export function mountComponent (
+  vm: Component,
+  el: ?Element,
+  hydrating?: boolean
+): Component {
+  vm.$el = el
+  // manually mounted instance, call mounted on self
+  // mounted is called for render-created child components in its inserted hook
+  if (vm.$vnode == null) {
+    vm._isMounted = true
+    callHook(vm, 'mounted') //调用mounted钩子
+  }
+  return vm
+}
+```
+<p>
+判断如果vm.$vnode == null，则设置vm._isMounted = true并调用mounted钩子函数
+</p>
 
 ## beforeUpdate()
+<p>
+数据更新时调用，发生在虚拟DOM打补丁之前。这里适合在更新之前访问现有的DOM，比如手动移除已添加的事件监听器。
+</p>
+
+### mountComponent
+
+```
+export function mountComponent (
+  vm: Component,
+  el: ?Element,
+  hydrating?: boolean
+): Component {
+  vm.$el = el
+  if (!vm.$options.render) {
+    vm.$options.render = createEmptyVNode
+  }
+
+  let updateComponent
+  /* istanbul ignore if */
+  if (process.env.NODE_ENV !== 'production' && config.performance && mark) {
+    updateComponent = () => {
+      const name = vm._name
+      const id = vm._uid
+      const startTag = `vue-perf-start:${id}`
+      const endTag = `vue-perf-end:${id}`
+
+      mark(startTag)
+      const vnode = vm._render()
+      mark(endTag)
+      measure(`vue ${name} render`, startTag, endTag)
+
+      mark(startTag)
+      vm._update(vnode, hydrating)
+      mark(endTag)
+      measure(`vue ${name} patch`, startTag, endTag)
+    }
+  } else {
+    updateComponent = () => {
+      vm._update(vm._render(), hydrating)
+    }
+  }
+
+  // we set this to vm._watcher inside the watcher's constructor
+  // since the watcher's initial patch may call $forceUpdate (e.g. inside child
+  // component's mounted hook), which relies on vm._watcher being already defined
+  new Watcher(vm, updateComponent, noop, {
+    before () {
+      if (vm._isMounted) {
+        callHook(vm, 'beforeUpdate')
+      }
+    }
+  }, true /* isRenderWatcher */)
+  hydrating = false
+
+  return vm
+}
+
+```
+<p>
+监测数据发生了变化，并且已经dom被挂载了之后，调用beforeUpdate钩子
+</p>
+
+### vm._update
+
+```
+// vue/src/core/instance/lifecycle.js
+Vue.prototype._update = function (vnode: VNode, hydrating?: boolean) {
+    const vm: Component = this
+    const prevEl = vm.$el
+    const prevVnode = vm._vnode
+    const prevActiveInstance = activeInstance
+    activeInstance = vm
+    vm._vnode = vnode
+    // Vue.prototype.__patch__ is injected in entry points
+    // based on the rendering backend used.
+    if (!prevVnode) {
+      // initial render
+      vm.$el = vm.__patch__(vm.$el, vnode, hydrating, false /* removeOnly */)
+    } else {
+      // updates
+      vm.$el = vm.__patch__(prevVnode, vnode)
+    }
+    activeInstance = prevActiveInstance
+    // update __vue__ reference
+    if (prevEl) {
+      prevEl.__vue__ = null
+    }
+    if (vm.$el) {
+      vm.$el.__vue__ = vm
+    }
+    // if parent is an HOC, update its $el as well
+    if (vm.$vnode && vm.$parent && vm.$vnode === vm.$parent._vnode) {
+      vm.$parent.$el = vm.$el
+    }
+    // updated hook is called by the scheduler to ensure that children are
+    // updated in a parent's updated hook.
+  }
+```
+<p>
+调用beforeUpdate钩子之后对虚拟dom重新渲染和补丁
+</p>
 
 ## updated()
+<p>
+由于数据更改导致的虚拟DOM重新渲染和打补丁，在这之后会调用该钩子。
+当这个钩子被调用时，组件DOM已经更新，所以你现在可以执行依赖于 DOM 的操作。然而在大多数情况下，你应该避免在此期间更改状态。如果要相应状态改变，通常最好使用计算属性或 watcher 取而代之。
+</p>
+
+```
+// vue/src/core/observer/scheduler.js
+function callUpdatedHooks (queue) {
+  let i = queue.length
+  while (i--) {
+    const watcher = queue[i]
+    const vm = watcher.vm
+    if (vm._watcher === watcher && vm._isMounted) {
+      callHook(vm, 'updated') // 调用updated钩子
+    }
+  }
+}
+
+function flushSchedulerQueue () {
+  flushing = true
+  let watcher, id
+  queue.sort((a, b) => a.id - b.id)
+
+  for (index = 0; index < queue.length; index++) {
+    watcher = queue[index]
+    id = watcher.id
+    has[id] = null
+    watcher.run()
+  }
+
+  const activatedQueue = activatedChildren.slice()
+  const updatedQueue = queue.slice()
+
+  resetSchedulerState()
+
+  // 调用组件的updated和activated生命周期
+  callActivatedHooks(activatedQueue)
+  callUpdatedHooks(updatedQueue)
+}
+
+export function queueWatcher (watcher: Watcher) {
+  const id = watcher.id
+  if (has[id] == null) {
+    has[id] = true // 此参数用于判断watcher的ID是否存在
+    ……
+    if (!waiting) {
+      waiting = true
+      nextTick(flushSchedulerQueue)
+    }
+  }
+}
+
+// src/core/observer/watcher.js
+  update () {
+    // lazy 懒加载
+    // sync 组件数据双向改变
+    if (this.lazy) {
+      this.dirty = true
+    } else if (this.sync) {
+      this.run()
+    } else {
+      queueWatcher(this) // 排队watcher
+    }
+  }
+```
+<p>
+队列执行完Watcher数组的update方法后调用了updated钩子，然后再是调用mounted钩子
+</p>
 
 ## beforeDestory()
+<p>
+实例销毁之前调用。在这一步，实例仍然完全可用。该钩子在服务器端渲染期间不被调用。
+</p>
+
+```
+// vue/src/core/instance/lifecycle.js
+Vue.prototype.$destroy = function () {
+    const vm: Component = this
+    if (vm._isBeingDestroyed) {
+      return
+    }
+    callHook(vm, 'beforeDestroy') // 调用beforeDestroy钩子
+  }
+}
+```
+<p>vm.$destory() is called时被调用</p>
 
 ## destroyed()
+<p>
+Vue实例销毁后调用。调用后，Vue实例指示的所有东西都会解绑定，所有的事件监听器会被移除，所有的子实例也会被销毁。
+</p>
+
+```
+Vue.prototype.$destroy = function () {
+    const vm: Component = this
+    if (vm._isBeingDestroyed) {
+      return
+    }
+    callHook(vm, 'beforeDestroy') //调用beforeDestroy钩子
+    vm._isBeingDestroyed = true
+    // remove self from parent
+    // 清除相关配置
+    const parent = vm.$parent
+    if (parent && !parent._isBeingDestroyed && !vm.$options.abstract) {
+      remove(parent.$children, vm)
+    }
+    // teardown watchers
+    if (vm._watcher) {
+      vm._watcher.teardown()
+    }
+    let i = vm._watchers.length
+    while (i--) {
+      vm._watchers[i].teardown()
+    }
+    // remove reference from data ob
+    // frozen object may not have observer.
+    if (vm._data.__ob__) {
+      vm._data.__ob__.vmCount--
+    }
+    // call the last hook...
+    vm._isDestroyed = true
+    // invoke destroy hooks on current rendered tree
+    vm.__patch__(vm._vnode, null)
+    // fire destroyed hook
+    callHook(vm, 'destroyed')
+    // turn off all instance listeners.
+    vm.$off()
+    // remove __vue__ reference
+    if (vm.$el) {
+      vm.$el.__vue__ = null
+    }
+    // release circular reference (#6759)
+    if (vm.$vnode) {
+      vm.$vnode.parent = null
+    }
+  }
+}
+```
+<p>
+这部分销毁Vue实例，将各种配置清空和移除。移除Watchers、child、events。
+</p>
