--- a/articles/面试/面试总结.md
+++ b/articles/面试/面试总结.md
@@ -1,4 +1,4 @@
-##js
+## js
 
 ### 一、	函数声明与函数表达式的区别
 1.	函数声明以关键字function开头，函数声明必须要用函数名，函数通过函数名来调用，并且函数可以在函数声明前调用，存在声明提升问题，函数声明会提升
@@ -24,6 +24,8 @@
 ### 六、	ajax
 1.	全称：异步 javascript 和xml ，用来和服务端进行数据交互，让无刷新替换页面数据成为了可能。
 2.	核心对象XmlHttpRequest，一种支持异步请求的技术，通过它可以使用javascript向服务器提出请求并处理响应
+
+```
 var xhr = new XMLHttpRequest(); // 声明一个请求对象
 xhr.onreadystatechange = function(){
     if(xhr.readyState === 4){  // readyState 4 代表已向服务器发送请求
@@ -41,63 +43,65 @@ xhr.open('GET', 'xxxx');
 xhr.setRequestHeader('Content-Type', 'application/json');
 
 xhr.send(null); // get方法 send null(亦或者不传,则直接是传递 header) ,post 的 send 则是传递值
-3.	XMLHttpRequest对象的三个常用属性
-3.1	onreadystatechange：存在有处理服务器响应的函数
-3.2	readyState：存有服务器响应的状态信息。每当readyState改变时，onreadystatechange函数就会被执行
-readyState属性可能的值：
-0 请求未初始化（在调用open()之前）
-1 请求已提出（调用send（）之前）
-2 请求已发送 （这里通常可以从响应得到内容头部）
-3 请求处理中（响应中通常有部分数据可用，但是服务器还没有完成响应）
-4 请求已完成（可以访问服务器响应并使用它）
-4.	XMLHttpRequest对象的方法
-4.1	open(‘method’, ‘url’, [sayncFlag]) method可以为get、post、put  建立对服务器的调用
-4.2	setRequestHeader(“header”,”value”) 把指定首部设置为所提供的值 设置请求头
-4.3	send(conetnt) 向服务器发送请求 
-5.	ajax编程步骤
-5.1	创建xmlHttpRequest 对象 new xmlHttpRequest
-5.2	设置请求方式  通过open()
-5.3	调用回调函数  onreadystatechange
-5.4	发送请求  send()
-6.	状态码
-6.1	1**：请求收到，继续处理
-6.2	2**： 操作成功收到，分析、接受 成功处理了请求状态
-         200 服务器已经成功处理请求，并提供了请求的网页
-			201 用户新建或修改数据成功
-         202 一个请求已经进入后台
-         204 用户删除成功
-6.3	3**：完成此请求必须进一步处理 每次请求使用的重定向不要超过5次
-304 网页上次请求没有更新，节省带宽和开销
-6.4	4**：请求包含一个错误语法或不能完成
-400 服务器不理解请求的语法
-401 用户没有权限（用户名，密码输入错误）
-403 用户得到授权（401相反），但是访问被禁止
-404 服务器找不到请求的网页，
-6.5	5**：服务器执行一个完全有效请求失败
-500——服务器产生内部错误
-501——服务器不支持请求的函数
-502——服务器暂时不可用，有时是为了防止发生系统过载 服务器目前无法使用
-503——服务器过载或暂停维修
-504——关口过载，服务器使用另一个关口或服务来响应用户，等待时间设定值较长
-505——服务器不支持或拒绝支请求头中指定的HTTP版本
+```
 
-### 七、	js中的数据类型
+3. XMLHttpRequest对象的三个常用属性
+- onreadystatechange：存在有处理服务器响应的函数
+- readyState：存有服务器响应的状态信息。每当readyState改变时，onreadystatechange函数就会被执行
+    + readyState属性可能的值：
+        - 0 请求未初始化（在调用open()之前）
+        -  1 请求已提出（调用send（）之前）
+        - 请求已发送 （这里通常可以从响应得到内容头部）
+        - 请求处理中（响应中通常有部分数据可用，但是服务器还没有完成响应）
+        -  请求已完成（可以访问服务器响应并使用它）
+4.	XMLHttpRequest对象的方法
+- open(‘method’, ‘url’, [sayncFlag]) method可以为get、post、put  建立对服务器的调用
+- setRequestHeader(“header”,”value”) 把指定首部设置为所提供的值 设置请求头
+- send(conetnt) 向服务器发送请求 
+5.	ajax编程步骤
+- 创建xmlHttpRequest 对象 new xmlHttpRequest
+- 设置请求方式  通过open()
+- 调用回调函数  onreadystatechange
+- 发送请求  send()
+6.	状态码
+- 1**：请求收到，继续处理
+- 2**： 操作成功收到，分析、接受 成功处理了请求状态
+    + 200 服务器已经成功处理请求，并提供了请求的网页
+    + 201 用户新建或修改数据成功
+    + 202 一个请求已经进入后台
+    + 204 用户删除成功
+- 3**：完成此请求必须进一步处理 每次请求使用的重定向不要超过5次
+    + 304 网页上次请求没有更新，节省带宽和开销
+- 4**：请求包含一个错误语法或不能完成
+    + 400 服务器不理解请求的语法
+    + 401 用户没有权限（用户名，密码输入错误）
+    + 403 用户得到授权（401相反），但是访问被禁止
+    + 404 服务器找不到请求的网页
+- 5**：服务器执行一个完全有效请求失败
+    + 500——服务器产生内部错误
+    + 501——服务器不支持请求的函数
+    + 502——服务器暂时不可用，有时是为了防止发生系统过载 服务器目前无法使用
+    + 503——服务器过载或暂停维修
+    + 504——关口过载，服务器使用另一个关口或服务来响应用户，等待时间设定值较长
+    + 505——服务器不支持或拒绝支请求头中指定的HTTP版本
+
+### 七、js中的数据类型
 1. 7种数据类型：Boolean、null、undefined、number、String、symbol(es6)、object
 2. 5种基本类型：Boolean、null、undefined、number、String
 3. 引用类型：object
 4. null是一种特殊的对象
 
-### 八、	跨域问题
+### 八、跨域问题
 1.	同源：域名、协议、端口均相同
 2.	同源策略：一种约定，是浏览器最核心最基本的安全功能，如果缺少了同源策略，浏览器很容易受到xss，CSFR等攻击。
 3.	跨域：指一个域下的文档或者脚本试图去请求另一个域下的资源
 4.	跨域问题：javascript只能访问和操作自己域下的资源，不能访问和操作其他域下的资源
 5.	解决方案：
-5.1 jsonp：通过动态创建script标签，然后利用src属性进行跨域   ajax库
-			JSONP 由两部分组成：回调函数和数据。回调函数是当响应到来时应该在页面中调用的函数。回调函数的名字一般是在请求中指定的。而数据就是传入回调函数中的 JSON 数据。
-5.2 服务器代理：浏览器有跨域限制，但是服务器不存在跨域问题，所以可以由服务器请求所要域的资源再返回给客户端
-5.3 document.domain + iframe(此方案仅限于主域相同，子域不同的跨域应用场景)：两个页面都通过强制设置document.domain为基础主域，就实现了同域
-5.4 nginx反向代理接口跨域：通过nginx配置一个代理服务器（域名与domain1相同，端口不同）做跳板机，反向代理访问domain2接口，并且可以顺便修改cookie中domain信息，方便当前域cookie写入，实现跨域登录
+    + jsonp：通过动态创建script标签，然后利用src属性进行跨域   ajax库
+                JSONP 由两部分组成：回调函数和数据。回调函数是当响应到来时应该在页面中调用的函数。回调函数的名字一般是在请求中指定的。而数据就是传入回调函数中的 JSON 数据。
+    + 服务器代理：浏览器有跨域限制，但是服务器不存在跨域问题，所以可以由服务器请求所要域的资源再返回给客户端
+    + document.domain + iframe(此方案仅限于主域相同，子域不同的跨域应用场景)：两个页面都通过强制设置document.domain为基础主域，就实现了同域
+    + nginx反向代理接口跨域：通过nginx配置一个代理服务器（域名与domain1相同，端口不同）做跳板机，反向代理访问domain2接口，并且可以顺便修改cookie中domain信息，方便当前域cookie写入，实现跨域登录
 ### 九、new操作符具体干了什么呢
 1. 创建一个空对象，并且 this 变量引用该对象，同时还继承了该函数的原型。
 2. 属性和方法被加入到 this 引用的对象中。
@@ -166,19 +170,19 @@ html5的一种本地缓存方案，目前主要用于浏览器保存体积较大
 4.	bind()：会创建一个函数的实例，其this值会被绑定到传给bind()函数的值  ES5
 ### 十八、前端性能优化
 1.	网络加载类
-1.1．	减少http请求次数及大小，合并图片，压缩js、css等文件
-1.2．	减少cookie的大小，每次客户端向服务器发送请求，会自动携带cookie
-1.3．	合理设置http缓存，例如添加代理服务器，当代理服务器转发从源服务器返回的响应时，其将保存资源的副本，客户端再次发送请求时将从代理服务器获取请求资源。
-1.4．	图片懒加载
+- 减少http请求次数及大小，合并图片，压缩js、css等文件
+- 减少cookie的大小，每次客户端向服务器发送请求，会自动携带cookie
+- 合理设置http缓存，例如添加代理服务器，当代理服务器转发从源服务器返回的响应时，其将保存资源的副本，客户端再次发送请求时将从代理服务器获取请求资源。
+- 图片懒加载
 2.	页面渲染类
-2.1.	css放在页面最上部，js放在页面最下面。
-浏览器会在下载完全部的css后才对整个页面进行渲染。浏览器在执行js代码时，不能同时做其他事情，即每次出现都会让页面等待脚本的解析和执行，js执行完才继续渲染页面，这就是js阻塞的特性。
-Script标签的两个属性：async、defer
-(1). 没有async或defer：表示浏览器会立即加载并执行相应的脚本。也就是说在渲染script标签之后的文档之前，不等待后续加载的文档元素，读到就开始加载和执行，此举会阻塞后续文档加载
-(2). 有async，表示后续文档的加载和渲染与js脚本的加载和执行时并行进行的，即异步执行
-(3) 有defer，表示加载后续文档的过程和js脚本的加载（此时仅加载不执行）是并行进行的的（异步），js脚本的执行需要等到文档所有的元素解析完成之后
-		2.2. 减少dom操作的次数，减少浏览器的重排和重绘
-		2.3 合理利用浏览器缓存
+- ss放在页面最上部，js放在页面最下面。
+    浏览器会在下载完全部的css后才对整个页面进行渲染。浏览器在执行js代码时，不能同时做其他事情，即每次出现都会让页面等待脚本的解析和执行，js执行完才继续渲染页面，这就是js阻塞的特性。
+    + Script标签的两个属性：async、defer
+        - 没有async或defer：表示浏览器会立即加载并执行相应的脚本。也就是说在渲染script标签之后的文档之前，不等待后续加载的文档元素，读到就开始加载和执行，此举会阻塞后续文档加载
+        - 有async，表示后续文档的加载和渲染与js脚本的加载和执行时并行进行的，即异步执行
+        - 有defer，表示加载后续文档的过程和js脚本的加载（此时仅加载不执行）是并行进行的的（异步），js脚本的执行需要等到文档所有的元素解析完成之后
+- 减少dom操作的次数，减少浏览器的重排和重绘
+- 合理利用浏览器缓存
 
 
 ## CSS
@@ -191,17 +195,19 @@ Script标签的两个属性：async、defer
 2.	增加子元素使用 clear:both
 3.	父元素使用伪类 clear:both
 ### 三、	元素分类
-1.	块状元素：<div>、 <p>、<h1>、<form>、<ul> 和 <li>
-2.	内联元素（行内元素）：<span>、<a>、<label>、<input>、 <img>、 <strong> 和<em>
+1.	块状元素：div、 p、h1、form、ul 和 li
+2.	内联元素（行内元素）：span、a、label、input、 img、 strong 和em
 ### 四、	居中
 1.	元素水平居中：
-1.1．	行内元素水平居中：行内元素包裹在display:block的父层元素中，父元素text-align:center
-1.2．	块状元素水平居中：元素 margin: 0 auto
-1.3．	多个块状元素水平居中：内部div设置为内联块display:inline-block,父元素text-align:center
+- 行内元素水平居中：行内元素包裹在display:block的父层元素中，父元素text-align:center
+- 块状元素水平居中：元素 margin: 0 auto
+- 多个块状元素水平居中：内部div设置为内联块display:inline-block,父元素text-align:center
 2.	元素垂直居中
-2.1.	单行内元素垂直居中：设置行内元素行高(line-height)为父元素的高度或者包裹块的高度。
-2.2.	多行的行内元素垂直居中：让包裹模拟表格单元display:table-cell，然后用vertical-align:middle进行控制位置
-2.3.	块状元素垂直居中（已知高度）：
+- 单行内元素垂直居中：设置行内元素行高(line-height)为父元素的高度或者包裹块的高度。
+- 多行的行内元素垂直居中：让包裹模拟表格单元display:table-cell，然后用vertical-align:middle进行控制位置
+- 块状元素垂直居中（已知高度）：
+
+```
 Div{
 	Position:absolute;
 	Top:50%;
@@ -210,12 +216,31 @@ Div{
 	Width:w px;
 	Margin-top:-h/2 px;
 }
-2.4.	已知宽高元素水平垂直居中：
-2.4.1.	position:absoluete;top:50%;left:50%;margin:-h/2px 0 0 –w/2 px
-2.5.	块状已知高元素水平垂直居中: 父元素display:flex 子元素margin:auto
-2.6.	未知宽高元素实现水平垂直居中
-2.6.1.	Position:absolute;top:50%;left:50%; transform: translate(-50%,-50%);
-2.6.2.	Display:flex; align-items: center; justify-content: center;
+```
+
+- 已知宽高元素水平垂直居中：
+
+```
+position:absoluete;
+top:50%;
+left:50%;
+margin:-h/2px 0 0 –w/2 px
+```
+- 块状已知高元素水平垂直居中: 父元素display:flex 子元素margin:auto
+- 未知宽高元素实现水平垂直居中
+
+```
+Position:absolute;
+top:50%;
+left:50%; 
+transform: translate(-50%,-50%);
+```
+
+```
+Display:flex; 
+align-items: center; 
+justify-content: center;
+```
 ### 五、	CSS权重
 !important > 行内样式 > id > class > tag 权重可以叠加
 
