补充new操作符内容

--- a/articles/面试/日常学习记录.md
+++ b/articles/面试/日常学习记录.md
@@ -103,9 +103,35 @@ xhr.send(null); // get方法 send null(亦或者不传,则直接是传递 header
     + document.domain + iframe(此方案仅限于主域相同，子域不同的跨域应用场景)：两个页面都通过强制设置document.domain为基础主域，就实现了同域
     + nginx反向代理接口跨域：通过nginx配置一个代理服务器（域名与domain1相同，端口不同）做跳板机，反向代理访问domain2接口，并且可以顺便修改cookie中domain信息，方便当前域cookie写入，实现跨域登录
 ### 九、new操作符具体干了什么呢
-1. 创建一个空对象，并且 this 变量引用该对象，同时还继承了该函数的原型。
-2. 属性和方法被加入到 this 引用的对象中。
-3. 新创建的对象由 this 所引用，并且最后隐式的返回 this 。
+1. 声明一个中间对象
+2. 将该中间对象的原型指向构造函数的原型
+3. 将构造函数的this，指向该中间对象
+4. 返回该中间对象，即返回实例对象
+
+```
+function P(firstName, lastName) {
+  this.age = 10;
+  this.getName = function() {
+    return `${firstName} ${lastName}`;
+  };
+}
+
+function newF() {
+  // 创建一个新的对象
+  let obj = {};
+  // 取出第一个参数，该参数就是我们将会传入的构造函数，比如在调用new(P)的时候，Constructor就是P本身
+  // arguments会被shift去除第一个参数，剩余的就是构造器P的参数
+  let Constructor = [].shift.call(arguments);
+  // 将obj的原型指向构造函数，此时obj可以访问构造函数原型中的属性
+  obj.__proto__ = Constructor.prototype;
+  // 改变构造函数的this的指向，使其指向obj， 此时obj也可以访问构造函数中的属性了
+  let result = Constructor.apply(obj, arguments);
+  // 确保 new 出来的是个对象 返回的值是什么就return什么
+  return typeof result === 'object' ? result : obj 
+}
+
+let p = newF(P, 'amanda', 'kelake');
+```
 ### 十、内存泄漏
 1. 指任何对象在您不再拥有或需要它之后仍然存在（例如：setTimeout 的第一个参数使用字符串而非函数的话，会引发内存泄漏）
 
