--- a/articles/面试/日常学习记录.md
+++ b/articles/面试/日常学习记录.md
@@ -137,13 +137,29 @@ let p = newF(P, 'amanda', 'kelake');
 
 ### 十一、从我们在地址栏输入url到网页渲染完成都经历了什么
 1. 输入URL 
-2. 浏览器查询域名IP地址 
-3. 浏览器发送HTTP请求到服务器 
+2. DNS域名解析查询
+    - 如果浏览器有缓存直接使用浏览器缓存，否则使用系统缓存，再没有的话使用路由器缓存
+    - 本地没有，向DNS域名服务器查询，找到对应的ip地址
+3. 浏览器发送HTTP请求到服务器，生成请求报文，等下服务器的响应
+4. 与web服务器建立TCP连接(3次握手)，连接成功后可以进行数据传递
+    - 第一次握手：建立连接。客户端向服务器发送SYN请求报文段，等待服务器确认
+    - 第二次握手：服务器收到来自客户端SYN报文段，并做出响应，发送ACK+SYN报文段给客户端
+    - 第三次握手：客户端接到了ACK+SYN报文段，并向服务器发送ACK报文段
+
+    - 第一次分手：主机1向主机2发送fin保文段，表明主机1没有数据要发送到主机2
+    - 第二次分手：主机2接收到了fin报文段，并向主机1发送ACK报文段，告诉主机1，同意主机1的关闭请求
+    - 第三次分手：主机2向主机1发送FIN报文段，请求关闭连接
+    - 第四次分手：主机1接收到了主机2的FIN报文段，向主机2发送ACK报文段，主机2接到了ACK报文段后，就关闭连接。主机1没有收到回复，也关闭连接
 4. 服务器发送重定向到浏览器 
 5. 浏览器重新发送HTTP请求到重定向地址 
 6. 服务器处理HTTP请求 
 7. 服务器发送响应到浏览器 
 8. 浏览器根据响应结果渲染页面 
+    - 解析html构建dom树
+    - 解析CSS生成CSS规则树
+    - 根据dom树和CSSOM生成render树
+    - 布局render树
+    - 绘制render树
 9. 浏览器发送请求获取嵌入HTML页面对象请求 
 10. 浏览器发送异步请求
 
@@ -184,8 +200,8 @@ html5的一种本地缓存方案，目前主要用于浏览器保存体积较大
 1.	作用：限制事件的频繁触发，dom操作比起非dom交互需要更多的内存和cpu时间，连续尝试进行过多的dom相关操作可能会导致浏览器挂起，有时候甚至会崩溃。
 2.	原理：如果你持续触发事件，每隔一段时间，只执行一次事件。
 3.	方法：
-3.1.	使用定时器：当触发事件的时候，我们设置一个定时器，再触发事件的时候，如果定时器存在，就不执行，直到定时器执行，然后执行函数，清空定时器，这样就可以设置下个定时器
-3.2.	使用时间戳：当触发事件的时候，我们取出当前的时间戳，然后减去之前的时间戳(最一开始值设为 0 )，如果大于设置的时间周期，就执行函数，然后更新时间戳为当前的时间戳，如果小于，就不执行
+    - 使用定时器：当触发事件的时候，我们设置一个定时器，再触发事件的时候，如果定时器存在，就不执行，直到定时器执行，然后执行函数，清空定时器，这样就可以设置下个定时器
+    - 使用时间戳：当触发事件的时候，我们取出当前的时间戳，然后减去之前的时间戳(最一开始值设为 0 )，如果大于设置的时间周期，就执行函数，然后更新时间戳为当前的时间戳，如果小于，就不执行
 ### 十六、函数防抖
 1.	作用：限制事件的频繁触发
 2.	原理：你尽管触发事件，但是我一定在事件触发 n 秒后才执行，如果你在一个事件触发的 n 秒内又触发了这个事件，那我就以新的事件的时间为准，n 秒后才执行，总之，就是要等你触发完事件 n 秒内不再触发事件，我才执行
@@ -194,21 +210,6 @@ html5的一种本地缓存方案，目前主要用于浏览器保存体积较大
 2.	call(): 接受多个参数，第一个参数为this对象，其余参数都可直接传递给函数，传递的参数必须逐个列举出来
 3.	apply()：接收两个参数，第一个参数为this对象，第二个参数为数组，或Array实例，也可以为arguments对象
 4.	bind()：会创建一个函数的实例，其this值会被绑定到传给bind()函数的值  ES5
-### 十八、前端性能优化
-1.	网络加载类
-- 减少http请求次数及大小，合并图片，压缩js、css等文件
-- 减少cookie的大小，每次客户端向服务器发送请求，会自动携带cookie
-- 合理设置http缓存，例如添加代理服务器，当代理服务器转发从源服务器返回的响应时，其将保存资源的副本，客户端再次发送请求时将从代理服务器获取请求资源。
-- 图片懒加载
-2.	页面渲染类
-- ss放在页面最上部，js放在页面最下面。
-    浏览器会在下载完全部的css后才对整个页面进行渲染。浏览器在执行js代码时，不能同时做其他事情，即每次出现都会让页面等待脚本的解析和执行，js执行完才继续渲染页面，这就是js阻塞的特性。
-    + Script标签的两个属性：async、defer
-        - 没有async或defer：表示浏览器会立即加载并执行相应的脚本。也就是说在渲染script标签之后的文档之前，不等待后续加载的文档元素，读到就开始加载和执行，此举会阻塞后续文档加载
-        - 有async，表示后续文档的加载和渲染与js脚本的加载和执行时并行进行的，即异步执行
-        - 有defer，表示加载后续文档的过程和js脚本的加载（此时仅加载不执行）是并行进行的的（异步），js脚本的执行需要等到文档所有的元素解析完成之后
-- 减少dom操作的次数，减少浏览器的重排和重绘
-- 合理利用浏览器缓存
 
 
 ## CSS
@@ -278,3 +279,43 @@ justify-content: center;
 1.	link属于XHTML标签，除了加载CSS外，还能用于定义RSS, 定义rel连接属性等作用；而@import是CSS提供的，只能用于加载CSS;
 2.	页面被加载的时，link会同时被加载，而@import引用的CSS会等到页面被加载完再加载
 3.	import是CSS2.1 提出的，只在IE5以上才能被识别，而link是XHTML标签，无兼容问题
+
+
+## 网络、浏览器、性能
+### 一、http与https
+1. 区别
+-  http是明文传输，https通过SSL(安全套接层)\TLS(安全传输层协议)进行了加密
+-  http的端口是80，https是443
+-  https需要到CA申请证书，一般免费证书很少，需要缴费
+-  HTTPS 的连接很简单，是无状态的；HTTPS 协议是由 SSL+HTTP 协议构建的可进行加密传输、身份认证的网络协议，比 HTTP 协议安全
+2. http的不足：
+- 通信使用明文（不加密），内容可能被窃听
+- 不验证通信方的身份，因此有可能遭遇伪装
+    + 在http协议通信时，由于不存在确认通信方的处理步骤，任何人都可以发送请求
+    + 服务器只要接收到请求，不管对方是谁都会返回一个响应
+- 无法证明报文的完整性，所以有可能已遭篡改
+3. https = http + 加密 + 认证 + 完整性保护（https并非是应用层的一种新协议，只是http通信接口部分用SSL和TLS协议代替而已。通常，http直接和TCP通信，当使用SSL时，则演变成先和SSL通信，再由SSL和TCP通信）
+- 通信加密：通过和SSL或TLS的组合使用，加密http的通信内容，用SSL建立安全通信路线之后，就可以在这条线路上进行http通信了
+- 内容加密：把http报文里所含的内容进行加密处理
+- 证书：由值得信任的第三方机构颁发，用以证明服务器和客户端是实际存在的
+- 数字签名：防止报文被篡改
+4. SSL：采用一种叫做公开密钥加密的加密处理方式
+- 对称密钥加密：加密和解密同使用一个密钥的方式，也被叫做共享密钥加密
+- 非对称密钥加密：使用一对非对称的密钥，一把叫做私有密钥，另一把叫做公开密钥，也叫做公开密钥加密。私有密钥不能让任何人知道，公开密钥则可以随意发布，任何人都可以获得。用私钥加密的数据，只有对应的公钥才能解密，用公钥加密的数据， 只有对应的私钥才能解密。公开密钥处理速度要比共享密钥慢
+    + 数字证书：证明公开密钥本身就是货真价实的公开密钥
+5. https采用对称密钥加密和非对称密钥加密两者并用到混合加密机制。在交换密钥环节使用公开密钥加密方式，之后的建立通信交换报文阶段则使用共享密钥加密的方式。
+### 二、前端性能优化
+1.	网络加载类
+- 减少http请求次数及大小，合并图片，压缩js、css等文件
+- 减少cookie的大小，每次客户端向服务器发送请求，会自动携带cookie
+- 合理设置http缓存，例如添加代理服务器，当代理服务器转发从源服务器返回的响应时，其将保存资源的副本，客户端再次发送请求时将从代理服务器获取请求资源。
+- 图片懒加载
+2.	页面渲染类
+- ss放在页面最上部，js放在页面最下面。
+    浏览器会在下载完全部的css后才对整个页面进行渲染。浏览器在执行js代码时，不能同时做其他事情，即每次出现都会让页面等待脚本的解析和执行，js执行完才继续渲染页面，这就是js阻塞的特性。
+    + Script标签的两个属性：async、defer
+        - 没有async或defer：表示浏览器会立即加载并执行相应的脚本。也就是说在渲染script标签之后的文档之前，不等待后续加载的文档元素，读到就开始加载和执行，此举会阻塞后续文档加载
+        - 有async，表示后续文档的加载和渲染与js脚本的加载和执行时并行进行的，即异步执行
+        - 有defer，表示加载后续文档的过程和js脚本的加载（此时仅加载不执行）是并行进行的的（异步），js脚本的执行需要等到文档所有的元素解析完成之后
+- 减少dom操作的次数，减少浏览器的重排和重绘
+- 合理利用浏览器缓存
