--- a/articles/面试/日常学习记录.md
+++ b/articles/面试/日常学习记录.md
@@ -1,27 +1,27 @@
 ## js
 
-### 一、	函数声明与函数表达式的区别
+### 一、函数声明与函数表达式的区别
 1.	函数声明以关键字function开头，函数声明必须要用函数名，函数通过函数名来调用，并且函数可以在函数声明前调用，存在声明提升问题，函数声明会提升
 2.	函数表达式属于javascript语句中的一部分，变量名可以和函数名相同，函数名也可以无，函数表达式的调用必须声明后调用
 3.	声明提升，变量提升只是将定义的变量提升了，初始化的代码没有提升
-### 二、	闭包
+### 二、闭包
 1.	有权访问另一个函数作用域中的变量的函数，函数在当前词法作用域之外执行函数
 2.	外部函数执行后，其整个内部作用域不会被销毁，闭包阻止了这件事情的发生
-### 三、	作用域链
+### 三、作用域链
 1.	全部函数无法查看局部函数的内部细节，但是局部函数可以查看其上层函数细节，直到全部细节。
 2.	当需要从局部函数查找某一属性或者方法时，如果当前的作用域中没有找到，就会上溯到上层作用域查找，直至全局函数，这种组织形式就是作用域
 
-### 四、	原型链
+### 四、原型链
 1.	js中每一个对象都有一个内置的[prototype]属性，其属性会对其他对象的引用。
 2.	原型链定义：相当于对象中的一个内部链接，会引用其他对象。如果在自身对象上没有找到需要的属性或者方法引用，引擎就会在[prototype]关联的对象上进行查找。同理，如果后者中也没有找到需要的引用就会继续查找它的[prototype]
 
-### 五、	this对象
+### 五、this对象
 1.	函数中，this的指向与函数的调用环境有关
 2.	函数调用时拥有一个上下文对象，this指向这个对象（隐式绑定），然而被隐式绑定的函数会丢失绑定对象(只是对对象的函数的引用)，this会指向window
 3.	bind()、apply()、call()直接绑定指定的对象
 4.	new绑定到实例对象
 
-### 六、	ajax
+### 六、ajax
 1.	全称：异步 javascript 和xml ，用来和服务端进行数据交互，让无刷新替换页面数据成为了可能。
 2.	核心对象XmlHttpRequest，一种支持异步请求的技术，通过它可以使用javascript向服务器提出请求并处理响应
 
@@ -71,9 +71,14 @@ xhr.send(null); // get方法 send null(亦或者不传,则直接是传递 header
     + 202 一个请求已经进入后台
     + 204 用户删除成功
 - 3**：完成此请求必须进一步处理 每次请求使用的重定向不要超过5次
-    + 304 网页上次请求没有更新，节省带宽和开销
+    + 301 永久性重定向，表明请求资源已被分配到了新的URI，以后应使用资源现在所指的URI
+    + 302 临时性重定向，表示请求的资源已被分配了新的URI，希望用户（本次）能使用新的URI访问
+        - 与301的区别：302代表的资源不是被永久移动，只是临时性质的，换句话说，已移动的资源对应的URI将来还有可能发生变化
+    + 303 表示请求对应的资源存在着另一个URL，应使用GET方法定向获取请求资源
+        - 与302的区别：303明确表示客户端应当采用GET方法获取资源
+    + 304 网页上次请求没有更新，节省带宽和开销 服务器资源没有改变，可直接使用客户端未过期的缓存
 - 4**：请求包含一个错误语法或不能完成
-    + 400 服务器不理解请求的语法
+    + 400 表示请求报文中存在语法错误
     + 401 用户没有权限（用户名，密码输入错误）
     + 403 用户得到授权（401相反），但是访问被禁止
     + 404 服务器找不到请求的网页
@@ -91,18 +96,7 @@ xhr.send(null); // get方法 send null(亦或者不传,则直接是传递 header
 3. 引用类型：object
 4. null是一种特殊的对象
 
-### 八、跨域问题
-1.	同源：域名、协议、端口均相同
-2.	同源策略：一种约定，是浏览器最核心最基本的安全功能，如果缺少了同源策略，浏览器很容易受到xss，CSFR等攻击。
-3.	跨域：指一个域下的文档或者脚本试图去请求另一个域下的资源
-4.	跨域问题：javascript只能访问和操作自己域下的资源，不能访问和操作其他域下的资源
-5.	解决方案：
-    + jsonp：通过动态创建script标签，然后利用src属性进行跨域   ajax库
-                JSONP 由两部分组成：回调函数和数据。回调函数是当响应到来时应该在页面中调用的函数。回调函数的名字一般是在请求中指定的。而数据就是传入回调函数中的 JSON 数据。
-    + 服务器代理：浏览器有跨域限制，但是服务器不存在跨域问题，所以可以由服务器请求所要域的资源再返回给客户端
-    + document.domain + iframe(此方案仅限于主域相同，子域不同的跨域应用场景)：两个页面都通过强制设置document.domain为基础主域，就实现了同域
-    + nginx反向代理接口跨域：通过nginx配置一个代理服务器（域名与domain1相同，端口不同）做跳板机，反向代理访问domain2接口，并且可以顺便修改cookie中domain信息，方便当前域cookie写入，实现跨域登录
-### 九、new操作符具体干了什么呢
+### 八、new操作符具体干了什么呢
 1. 声明一个中间对象
 2. 将该中间对象的原型指向构造函数的原型
 3. 将构造函数的this，指向该中间对象
@@ -132,63 +126,16 @@ function newF() {
 
 let p = newF(P, 'amanda', 'kelake');
 ```
-### 十、内存泄漏
+### 九、内存泄漏
 1. 指任何对象在您不再拥有或需要它之后仍然存在（例如：setTimeout 的第一个参数使用字符串而非函数的话，会引发内存泄漏）
 
-### 十一、从我们在地址栏输入url到网页渲染完成都经历了什么
-1. 输入URL 
-2. DNS域名解析查询
-    - 如果浏览器有缓存直接使用浏览器缓存，否则使用系统缓存，再没有的话使用路由器缓存
-    - 本地没有，向DNS域名服务器查询，找到对应的ip地址
-3. 浏览器发送HTTP请求到服务器，生成请求报文，等下服务器的响应
-4. 与web服务器建立TCP连接(3次握手)，连接成功后可以进行数据传递
-    - 第一次握手：建立连接。客户端向服务器发送SYN请求报文段，等待服务器确认
-    - 第二次握手：服务器收到来自客户端SYN报文段，并做出响应，发送ACK+SYN报文段给客户端
-    - 第三次握手：客户端接到了ACK+SYN报文段，并向服务器发送ACK报文段
-
-    - 第一次分手：主机1向主机2发送fin保文段，表明主机1没有数据要发送到主机2
-    - 第二次分手：主机2接收到了fin报文段，并向主机1发送ACK报文段，告诉主机1，同意主机1的关闭请求
-    - 第三次分手：主机2向主机1发送FIN报文段，请求关闭连接
-    - 第四次分手：主机1接收到了主机2的FIN报文段，向主机2发送ACK报文段，主机2接到了ACK报文段后，就关闭连接。主机1没有收到回复，也关闭连接
-4. 服务器发送重定向到浏览器 
-5. 浏览器重新发送HTTP请求到重定向地址 
-6. 服务器处理HTTP请求 
-7. 服务器发送响应到浏览器 
-8. 浏览器根据响应结果渲染页面 
-    - 解析html构建dom树
-    - 解析CSS生成CSS规则树
-    - 根据dom树和CSSOM生成render树
-    - 布局render树
-    - 绘制render树
-9. 浏览器发送请求获取嵌入HTML页面对象请求 
-10. 浏览器发送异步请求
-
-### 十二、浏览器数据持久化存储技术
-1.	http文件缓存  304
-基于http协议的浏览器端文件级缓存机制。在文件重复请求的情况下，浏览器可以根据http响应的协议头信息判断是从服务器端请求文件还是从本地读取文件  加快页面资源加载，同时节省网路流量
-2.	loaclStorage
-html5的一种本地缓存方案，目前主要用于浏览器保存体积较大的数据，数据永久保存在客户端
-3.	sessionStorage
-和localStorage的功能相似，但是sessionStorage在浏览器关闭时会自动清空，不能进行客户端的持久化数据存储
-4.	cookie
-网站为了辨别用户身份或者Session跟踪而存储在用户浏览器端的数据。Cookie信息一般会通过http请求发送的服务器端，最大长度限制为4kb
-   Session Cookie：一般不会设置过期时间，cookie的生命周期为浏览器会话期间，只要关闭浏览器窗口
-持久化cookie：一般会设置过期时间，而且浏览器会将持久型cookie的信息保存到硬盘上，关闭后再打开浏览器，这些cookie依然有效，直到超过设定的过期时间或被清空
-5.	WebSQL
-浏览器用于存储较大量数据的缓存机制，允许sql语句查询，实现小型数据库存储功能，不是html5规范的组成部分
-6.	IndexDB
-可在客户端存储大量结构化数据并且能在这些数据上使用索引进行高效能检索的一条api，大小限制通常约为50MB，可以将大量数据保存在本地，但可以会造成数据泄露
-7.	Application Cache
-允许浏览器通过manifest配置文件在本地有选择性的存储javascript、css、图片等资源的文件级缓存机制
-8.	Session
-在服务端保存的一个数据结构，用来跟踪用户的状态，这个数据可以保存在集群、数据库、文件中
-### 十三、commonJS、 cmd、amd、ES6export
+### 十、commonJS、 cmd、amd、ES6export
 1.	CommonJS是node.js中的模块化规范，它有四个重要的环境变量为模块化的实现提供支持：module、exports、require、global。用module.exports定义当前模块对外输出的接口（不推荐直接用exports），用require加载模块
 2.	AMD采用的是异步方式加载模块，模块的加载不影响他后面语句的运行。所有的依赖这个模块的语句，都定义在一个回调函数中，等到加载完成之后，这个回调函数才会运行。用require.js实现AMD规范的模块化：用require.config()指定引用路径等，用define()定义模块，用require()加载模块
 3.	CMD是另一种js模块化方案，它与AMD很类似，不同点在于：AMD 推崇依赖前置、提前执行，CMD推崇依赖就近、延迟执行。此规范其实是在sea.js推广过程中产生的。
 4.	ES6中其模块功能主要由两个命令构成：export和import。export命令用于规定模块的对外接口，import命令用于输入其他模块提供的功能
 5.	ES6 模块与 CommonJS 模块的差异：1. CommonJS 模块输出的是一个值的拷贝，ES6 模块输出的是值的引用。2. CommonJS 模块是运行时加载，ES6 模块是编译时输出接口。
-### 十四、promise
+### 十一、promise
 1.	是一个对象，从它可以获取异步操作的消息，保存着某个未来才会结束的事件（通常是一个异步操作）的结果。
 2.	对象的状态不受外界影响。Promise对象代表一个异步操作，有3种状态：Pending(进行中)、Fulfilled(已成功)和Rejected(已失败)。
 3.	一旦状态改变就不会再变，任何时候都可以得到这个结果。
@@ -196,16 +143,16 @@ html5的一种本地缓存方案，目前主要用于浏览器保存体积较大
 5.	Promise对象是一个构造函数，用来生成promise实例。构造函数接受一个函数作为参数，该函数的两个参数分别是resolve和reject，这两个参数是两个函数，由javascript引擎提供。
 6.	Resolve函数的作用是将promise对象的状态从“未完成”变为“成功”，在异步操作成功时调用，并将异步操作的结果作为参数传递出去。Reject函数的作用是将promise对象的状态从“未完成”变为“失败”，在异步操作失败时调用，并将异步操作报出的错误作为参数传递出去。
 7.	Promise实例生成以后，可以用then方法分别指定resolved状态和rejected状态的回调函数。then方法可以接受两个回调函数作为参数。第一个回调函数是promise对象的状态变为resolved时调用，第二个回调函数是promise对象的状态变为rejected时调用，其中第二个函数是可选的。这两个函数都接受promise对象传出的值作为参数
-### 十五、函数节流
+### 十二、函数节流
 1.	作用：限制事件的频繁触发，dom操作比起非dom交互需要更多的内存和cpu时间，连续尝试进行过多的dom相关操作可能会导致浏览器挂起，有时候甚至会崩溃。
 2.	原理：如果你持续触发事件，每隔一段时间，只执行一次事件。
 3.	方法：
     - 使用定时器：当触发事件的时候，我们设置一个定时器，再触发事件的时候，如果定时器存在，就不执行，直到定时器执行，然后执行函数，清空定时器，这样就可以设置下个定时器
     - 使用时间戳：当触发事件的时候，我们取出当前的时间戳，然后减去之前的时间戳(最一开始值设为 0 )，如果大于设置的时间周期，就执行函数，然后更新时间戳为当前的时间戳，如果小于，就不执行
-### 十六、函数防抖
+### 十三、函数防抖
 1.	作用：限制事件的频繁触发
 2.	原理：你尽管触发事件，但是我一定在事件触发 n 秒后才执行，如果你在一个事件触发的 n 秒内又触发了这个事件，那我就以新的事件的时间为准，n 秒后才执行，总之，就是要等你触发完事件 n 秒内不再触发事件，我才执行
-### 十七、call()、apply()、bind()
+### 十四、call()、apply()、bind()
 1.	作用：都是用来改变方法的this关键字
 2.	call(): 接受多个参数，第一个参数为this对象，其余参数都可直接传递给函数，传递的参数必须逐个列举出来
 3.	apply()：接收两个参数，第一个参数为this对象，第二个参数为数组，或Array实例，也可以为arguments对象
@@ -311,7 +258,7 @@ justify-content: center;
 - 合理设置http缓存，例如添加代理服务器，当代理服务器转发从源服务器返回的响应时，其将保存资源的副本，客户端再次发送请求时将从代理服务器获取请求资源。
 - 图片懒加载
 2.	页面渲染类
-- ss放在页面最上部，js放在页面最下面。
+- style放在页面最上部，js放在页面最下面。
     浏览器会在下载完全部的css后才对整个页面进行渲染。浏览器在执行js代码时，不能同时做其他事情，即每次出现都会让页面等待脚本的解析和执行，js执行完才继续渲染页面，这就是js阻塞的特性。
     + Script标签的两个属性：async、defer
         - 没有async或defer：表示浏览器会立即加载并执行相应的脚本。也就是说在渲染script标签之后的文档之前，不等待后续加载的文档元素，读到就开始加载和执行，此举会阻塞后续文档加载
@@ -319,3 +266,68 @@ justify-content: center;
         - 有defer，表示加载后续文档的过程和js脚本的加载（此时仅加载不执行）是并行进行的的（异步），js脚本的执行需要等到文档所有的元素解析完成之后
 - 减少dom操作的次数，减少浏览器的重排和重绘
 - 合理利用浏览器缓存
+
+### 三、主流浏览器内核分类
+1. Webkit：Safari、Chrome、安卓
+2. Gecko：netscape、Mozilla
+3. Trident：IE、360
+4. Presto：Opera
+### 四、浏览器数据持久化存储技术
+1.	http文件缓存  304
+基于http协议的浏览器端文件级缓存机制。在文件重复请求的情况下，浏览器可以根据http响应的协议头信息判断是从服务器端请求文件还是从本地读取文件  加快页面资源加载，同时节省网路流量
+2.	loaclStorage
+html5的一种本地缓存方案，目前主要用于浏览器保存体积较大的数据，数据永久保存在客户端
+3.	sessionStorage
+和localStorage的功能相似，但是sessionStorage在浏览器关闭时会自动清空，不能进行客户端的持久化数据存储
+4.	cookie
+网站为了辨别用户身份或者Session跟踪而存储在用户浏览器端的数据。Cookie信息一般会通过http请求发送的服务器端，最大长度限制为4kb
+   Session Cookie：一般不会设置过期时间，cookie的生命周期为浏览器会话期间，只要关闭浏览器窗口
+持久化cookie：一般会设置过期时间，而且浏览器会将持久型cookie的信息保存到硬盘上，关闭后再打开浏览器，这些cookie依然有效，直到超过设定的过期时间或被清空
+5.	WebSQL
+浏览器用于存储较大量数据的缓存机制，允许sql语句查询，实现小型数据库存储功能，不是html5规范的组成部分
+6.	IndexDB
+可在客户端存储大量结构化数据并且能在这些数据上使用索引进行高效能检索的一条api，大小限制通常约为50MB，可以将大量数据保存在本地，但可以会造成数据泄露
+7.	Application Cache
+允许浏览器通过manifest配置文件在本地有选择性的存储javascript、css、图片等资源的文件级缓存机制
+8.	Session
+在服务端保存的一个数据结构，用来跟踪用户的状态，这个数据可以保存在集群、数据库、文件中
+
+### 五、从我们在地址栏输入url到网页渲染完成都经历了什么
+1. 输入URL 
+2. DNS域名解析查询
+    - 如果浏览器有缓存直接使用浏览器缓存，否则使用系统缓存，再没有的话使用路由器缓存
+    - 本地没有，向DNS域名服务器查询，找到对应的ip地址
+3. 浏览器发送HTTP请求到服务器，生成请求报文，等下服务器的响应
+4. 与web服务器建立TCP连接(3次握手)，连接成功后可以进行数据传递
+    - 第一次握手：建立连接。客户端向服务器发送SYN请求报文段，等待服务器确认
+    - 第二次握手：服务器收到来自客户端SYN报文段，并做出响应，发送ACK+SYN报文段给客户端
+    - 第三次握手：客户端接到了ACK+SYN报文段，并向服务器发送ACK报文段
+
+    - 第一次分手：主机1向主机2发送fin保文段，表明主机1没有数据要发送到主机2
+    - 第二次分手：主机2接收到了fin报文段，并向主机1发送ACK报文段，告诉主机1，同意主机1的关闭请求
+    - 第三次分手：主机2向主机1发送FIN报文段，请求关闭连接
+    - 第四次分手：主机1接收到了主机2的FIN报文段，向主机2发送ACK报文段，主机2接到了ACK报文段后，就关闭连接。主机1没有收到回复，也关闭连接
+4. 服务器发送重定向到浏览器 
+5. 浏览器重新发送HTTP请求到重定向地址 
+6. 服务器处理HTTP请求 
+7. 服务器发送响应到浏览器 
+8. 浏览器根据响应结果渲染页面 
+    - 解析html构建dom树
+    - 解析CSS生成CSS规则树
+    - 根据dom树和CSSOM生成render树
+    - 布局render树
+    - 绘制render树
+9. 浏览器发送请求获取嵌入HTML页面对象请求 
+10. 浏览器发送异步请求
+
+### 六、跨域问题
+1.	同源：域名、协议、端口均相同
+2.	同源策略：一种约定，是浏览器最核心最基本的安全功能，如果缺少了同源策略，浏览器很容易受到xss，CSFR等攻击。
+3.	跨域：指一个域下的文档或者脚本试图去请求另一个域下的资源
+4.	跨域问题：javascript只能访问和操作自己域下的资源，不能访问和操作其他域下的资源
+5.	解决方案：
+    + jsonp：通过动态创建script标签，然后利用src属性进行跨域   ajax库
+                JSONP 由两部分组成：回调函数和数据。回调函数是当响应到来时应该在页面中调用的函数。回调函数的名字一般是在请求中指定的。而数据就是传入回调函数中的 JSON 数据。
+    + 服务器代理：浏览器有跨域限制，但是服务器不存在跨域问题，所以可以由服务器请求所要域的资源再返回给客户端
+    + document.domain + iframe(此方案仅限于主域相同，子域不同的跨域应用场景)：两个页面都通过强制设置document.domain为基础主域，就实现了同域
+    + nginx反向代理接口跨域：通过nginx配置一个代理服务器（域名与domain1相同，端口不同）做跳板机，反向代理访问domain2接口，并且可以顺便修改cookie中domain信息，方便当前域cookie写入，实现跨域登录
