--- a/articles/面试/日常学习记录.md
+++ b/articles/面试/日常学习记录.md
@@ -158,6 +158,194 @@ let p = newF(P, 'amanda', 'kelake');
 3.	apply()：接收两个参数，第一个参数为this对象，第二个参数为数组，或Array实例，也可以为arguments对象
 4.	bind()：会创建一个函数的实例，其this值会被绑定到传给bind()函数的值  ES5
 
+### 十五、创建对象
+1. 工厂模式
+    - 缺点：没有解决对象识别的问题，即不知道一个对象的类型
+
+```
+function createPerson(name, age, job) {
+    let o = new Object()
+    o.name = name
+    o.age = age
+    o.job = job
+    o.sayName = function() {
+        console.log(this.name)
+    }
+    return o
+}
+let person1 = createPerson('jxufe', 95, 'teacher')
+let person2 = createPerson('jxufer', 100, 'teacher')
+```
+2. 构造函数模式
+    - 缺点：定义了全局函数，没有体现封装性
+
+```
+function Person(name, age, job) {
+    this.name = name
+    this.age = age
+    this.job = job
+    this.sayName = sayName
+}
+function sayName() {
+    console.log(this.name)
+}
+let person1 = new Person('jxufe', 95, 'teacher')
+let person2 = new Person('jxufer', 100, 'teacher')
+```
+3. 原型模式
+    - 缺点：所有的属性和方法被共享
+```
+function Person() {}
+Person.prototype.name = 'jxufe'
+Person.prototype.age = '95'
+Person.prototype.job = 'teacher'
+Person.prototype.sayName = function() {
+    console.log(this.name)
+}
+let person1 = new Person('jxufe', 95, 'teacher')
+person1.sayName() // 'jxufe'
+let person2 = new Person('jxufer', 100, 'teacher2')
+person.sayName() // 'jxufe'
+```
+4. 组合使用构造函数模式和原型模式
+- 构造函数模式用于定义实例属性
+- 原型模式用于定义方法和共享的属性
+
+```
+function Person(name, age, job) {
+    this.name = name
+    this.age = age
+    this.job = job
+    this.friends = ['11', '22']
+}
+Person.prototype = {
+    constructor: Person
+    sayName: function() {
+        console.log(this.name)
+    }
+}
+let person1 = new Person('jxufe', 95, 'teacher')
+let person2 = new Person('jxufer', 100, 'teacher')
+person1.frineds.push('33')
+console.log(person1.friends) // ['11', '22', '33']
+console.log(person2.friends) // ['11', '22']
+```
+
+### 十六、继承
+1. 原型链
+- 缺点：
+    + 包含引用类型值的原型属性会被所有实例共享
+    + 在创建子类型的实例时，不能向超类型的构造函数中传递参数
+
+```
+function SuperType() {
+    this.property = true
+}
+SuperType.prototype.getSuperValue = function() {
+    return this.property
+}
+function SubType() {
+    this.subproperty = false
+}
+SubType.prototype = new SuperType()
+SubType.prototype.getSubValue = function() {
+    return this.subproperty
+}
+let instance = new SubType()
+console.log(instance.getSuperValue()) // true
+```
+2. 借用构造函数（在子类型构造函数的内部调用超类型构造函数）
+- 优点：可以在子类型构造函数中向超类型构造函数传递参数
+- 缺点：方法都在构造函数中定义，做不到函数复用
+
+```
+function SuperType(name) {
+    this.name = name
+}
+function SubType() {
+    // 继承了SuperType，同时还传递了参数
+    SuperType.call(this, 'jxufe')
+    this.age = 95
+}
+let instance = new SubType()
+console.log(instance.name) // jxufe
+console.log(instance.age) // 95
+```
+3. 组合继承（将原型链和借用构造函数的技术组合到一起）
+- 使用原型链实现对原型属性和方法的继承
+- 通过借用构造函数来实现对实例属性的继承
+
+```
+function SuperType(name) {
+  this.name = name
+  this.colors = ['red', 'blue', 'green']
+}
+SuperType.prototype.sayName = function() {
+  console.log(this.name)
+}
+function SubType(name, age) {
+  // 继承了SuperType，同时还传递了参数
+  SuperType.call(this, 'jxufe')
+  this.age = age
+}
+SubType.prototype = new SuperType()
+SubType.prototype.constructor = SubType
+SubType.prototype.sayAge = function() {
+  console.log(this.age)
+}
+// console.log(SubType.prototype)
+let instance1 = new SubType('jxufe', 95)
+instance1.colors.push('black')
+console.log(instance1.colors) // [ 'red', 'blue', 'green', 'black' ]
+instance1.sayName() // jxufe
+instance1.sayAge() // 95
+
+let instance2 = new SubType('jxufer', 100)
+console.log(instance2.colors) // [ 'red', 'blue', 'green' ]
+instance2.sayName() // jxufer
+instance2.sayAge()  // 100
+```
+4. 原型式继承
+
+```
+function object(o) {
+  function F() {}
+  F.prototype = o
+  return new F()
+}
+let person = {
+  name: 'jxufe',
+  frineds: ['11', '22', '33']
+}
+let anotherPerson = object(person)
+anotherPerson.name = 'jxufer'
+anotherPerson.frineds.push('44')
+console.log(person.frineds) //  '11', '22', '33', '44' ]
+```
+5. 寄生式继承
+
+```
+function object(o) {
+  function F() {}
+  F.prototype = o
+  return new F()
+}
+function createAnother(original) {
+    let clone = object(original)
+    clone.sayHi = function() {
+        console.log('hi')
+    }
+    return clone
+}
+let person = {
+  name: 'jxufe',
+  frineds: ['11', '22', '33']
+}
+let anotherPerson = createAnother(person)
+anotherPerson.sayHi() // hi
+```
+6. 寄生组合式继承
+
 
 ## CSS
 ### 一、	box-sizing 盒模型
@@ -234,7 +422,7 @@ justify-content: center;
 -  http是明文传输，https通过SSL(安全套接层)\TLS(安全传输层协议)进行了加密
 -  http的端口是80，https是443
 -  https需要到CA申请证书，一般免费证书很少，需要缴费
--  HTTPS 的连接很简单，是无状态的；HTTPS 协议是由 SSL+HTTP 协议构建的可进行加密传输、身份认证的网络协议，比 HTTP 协议安全
+-  HTTP 的连接很简单，是无状态的；HTTPS 协议是由 SSL+HTTP 协议构建的可进行加密传输、身份认证的网络协议，比 HTTP 协议安全
 2. http的不足：
 - 通信使用明文（不加密），内容可能被窃听
 - 不验证通信方的身份，因此有可能遭遇伪装
